[project]
name = "linhcnh-finaltest-basiccloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38",
    "fastapi>=0.136.1",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "uvicorn[standard]>=0.47.0",
]
